--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* SCROLLBAR */
+/* For Chrome, Safari, and Edge */
+::-webkit-scrollbar {
+    width: 12px; /* Width of the scrollbar */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Background color of the track */
+    border-radius: 10px; /* Rounded track */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #888; /* Scrollbar color */
+    border-radius: 10px; /* Rounded scrollbar */
+    border: 3px solid #f1f1f1; /* Adds padding inside the scrollbar thumb */
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Scrollbar color on hover */
+  }
+  
+  /* For Firefox */
+  html {
+    scrollbar-width: thin; /* Make the scrollbar thinner */
+    scrollbar-color: #888 #f1f1f1; /* Color of the scrollbar and track */
+  }
+  
